// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Properties /> should not render if no data is available 1`] = `
<Properties
  properties={null}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Portal
    name="product.properties.before"
    props={null}
  />
  <Portal
    name="product.properties"
    props={null}
  />
  <Portal
    name="product.properties.after"
    props={null}
  />
</Properties>
`;

exports[`<Properties /> should render table with properties 1`] = `
<Properties
  properties={
    Array [
      Object {
        "label": "foo",
        "value": "bar",
      },
      Object {
        "label": "bar",
        "value": "foo",
      },
    ]
  }
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Portal
    name="product.properties.before"
    props={null}
  />
  <Portal
    name="product.properties"
    props={null}
  >
    <div
      className={
        Object {
          "data-css-ugj8xm": "",
        }
      }
    >
      <table
        className={
          Object {
            "data-css-13asv6l": "",
          }
        }
      >
        <tbody>
          <PropertyRows
            properties={
              Array [
                Object {
                  "label": "foo",
                  "value": "bar",
                },
                Object {
                  "label": "bar",
                  "value": "foo",
                },
              ]
            }
          >
            <tr
              key="foobar"
            >
              <td
                className={
                  Object {
                    "data-css-19ob0vg": "",
                  }
                }
              >
                foo
              </td>
              <td
                className={
                  Object {
                    "data-css-19ob0vg": "",
                  }
                }
                data-test-id="property: bar"
              >
                bar
              </td>
            </tr>
            <tr
              key="barfoo"
            >
              <td
                className={
                  Object {
                    "data-css-19ob0vg": "",
                  }
                }
              >
                bar
              </td>
              <td
                className={
                  Object {
                    "data-css-19ob0vg": "",
                  }
                }
                data-test-id="property: foo"
              >
                foo
              </td>
            </tr>
          </PropertyRows>
        </tbody>
      </table>
    </div>
  </Portal>
  <Portal
    name="product.properties.after"
    props={null}
  />
</Properties>
`;
